delete tags and debug controller